# cookiecutter-ansible-role

./: .gitignore  .yamllint  LICENSE  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.role_dir}}/: .ansible-lint  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == None -%} COPYING {%- endif %}
{{cookiecutter.role_dir}}/meta/: main.yml
{{cookiecutter.role_dir}}/tasks/: main.yml
