[tool.poetry]
name = "cookiecutter-ansible-role"
version = "0.1.0"
description = ""
authors = ["Jürgen Löhel <juergen@loehel.de>"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
